# 4Modelos

./: README.md  pyproject.toml
Código/: Preprocesamiento_y_Entrenamiento.ipynb
