[tool.poetry]
name = "tarea1"
version = "0.1.0"
description = ""
authors = ["Juan <juanavila9905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ucimlrepo = "^0.0.7"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
